# freeflowfeeds

./: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  LICENSE  README.md  add_lang_to_json.py  add_publisher_to_json.py  docker-compose.yml  migration.py  nginx_default.conf  rss_feeds.db  rss_feeds.dsl
data/: data_10001996912995110655.json  data_10009803728190053651.json  data_10050016700364032781.json  data_10060927548120098777.json  data_1013796937140166537.json  data_10161895792132534436.json  data_10240350503821438762.json  data_10247472854028670564.json  data_10248273701879872953.json  data_10289694636455438419.json  data_1029568532501971026.json  data_10349773405196699875.json  data_1035519745139286876.json  data_10355222197374939082.json  data_10357315705296329944.json  data_10362130565932396184.json  data_10380658379449434892.json  data_10397287472063228253.json  data_10401125223787956743.json  data_10402202675198707840.json  data_10408826994749420604.json  data_10427437775919816370.json  data_10449585103885707067.json  data_1045674107545211697.json  data_10487275997464225010.json  data_10523769468192039765.json  data_10537627675039642220.json  data_10545585710997557038.json  data_10548648800178642021.json  data_10566500761151637439.json  data_10583870384734413815.json  data_10617590122096900397.json  data_10644971553505342354.json  data_10721588552514661935.json  data_10748898831248016055.json  data_10761644618847073495.json  data_10785827571498965418.json  data_10821148119631453681.json  data_10828890541555404040.json  data_10858518840317113726.json  (+848 more)
nginx/: default.conf
src/main/org/scalatheagorist/freeflowfeeds/: app_config.rs  libs.rs  main.rs
src/main/org/scalatheagorist/freeflowfeeds/backend/: mod.rs
src/main/org/scalatheagorist/freeflowfeeds/backend/clients/: db_client.rs  fs_client.rs  http_client.rs  mod.rs
src/main/org/scalatheagorist/freeflowfeeds/backend/http/: http_server.rs  mod.rs
src/main/org/scalatheagorist/freeflowfeeds/backend/models/: article.rs  html_response.rs  mod.rs  rss_feed.rs  sql_types.rs
src/main/org/scalatheagorist/freeflowfeeds/backend/publisher/: diemarktradikalen.rs  efmagazin.rs  freiheitsfunken.rs  hayekinstitut.rs  misesde.rs  mod.rs  props.rs  publishers.rs  sandwirt.rs  schweizermonat.rs
src/main/org/scalatheagorist/freeflowfeeds/backend/server/: mod.rs  rest_server.rs
src/main/org/scalatheagorist/freeflowfeeds/backend/services/: html_scrape_service.rs  mod.rs  rss_service.rs
src/main/org/scalatheagorist/freeflowfeeds/core/: fs_client.rs  http_client.rs  hyper_client.rs  mod.rs  redis_client.rs
src/main/org/scalatheagorist/freeflowfeeds/frontend/: mod.rs
src/main/org/scalatheagorist/freeflowfeeds/frontend/server/: mod.rs  rest_server.rs  routes.rs  web_env.rs
src/main/org/scalatheagorist/freeflowfeeds/frontend/view/: index_html.rs  mod.rs  tags.rs  (+1 more)
src/main/org/scalatheagorist/freeflowfeeds/http/: http_server.rs  mod.rs
src/main/org/scalatheagorist/freeflowfeeds/httpserver/: http_server.rs  mod.rs
src/main/org/scalatheagorist/freeflowfeeds/models/: article.rs  hosts.rs  html_response.rs  mod.rs  rss_feed.rs
src/main/org/scalatheagorist/freeflowfeeds/publisher/: diemarktradikalen.rs  efmagazin.rs  freiheitsfunken.rs  hayekinstitut.rs  hosts.rs  misesde.rs  mod.rs  publishers.rs  rss_builder.rs  sandwirt.rs  schweizermonat.rs
src/main/org/scalatheagorist/freeflowfeeds/services/: html_scrape_service.rs  rss_service.rs
src/main/org/scalatheagorist/freeflowfeeds/utils/: file_reader.rs  hash_value.rs  headers.rs  mod.rs
src/main/org/scalatheagorist/freeflowfeeds/view/: mod.rs  rss_builder.rs  tags.rs
src/main/resources/: config.yml
src/resources/: config.yml
src/tests/: Cargo.toml
src/tests/data/: data_test.json
src/tests/src/: die_marktradikalen_tests.rs  diemarktradikalen_get_rss_test.rs  diemarktradikalen_html_select_test.rs  eigentuemlichfrei_html_select_test.rs  eigentuemlichfrei_tests.rs  freiheitsfunken_html_select_test.rs  hayekinstitut_html_select_test.rs  html_render_test.rs  libs.rs  main.rs  misesde_html_select_test.rs  redis_test.rs  rss_service_tests.rs  sandwirt_html_select_test.rs  schweizermonat_html_select_test.rs  utils_spec.rs
(+6 files in other folders)
