[package]
name = "freeflowfeeds"
version = "1.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "freeflowfeeds"
path = "src/main/org/scalatheagorist/freeflowfeeds/main.rs"

[profile.dev]
debug = true

[profile.release]
incremental = true
debug = true
lto = "fat"

[lib]
name = "freeflowfeeds"
path = "src/main/org/scalatheagorist/freeflowfeeds/libs.rs"

[dependencies]
async-std = "1.12.0"
config = "0.13.3"
futures = "0.3.28"
futures-util = "0.3.21"
hyper = { version = "0.14.27", features = ["full"] }
hyper-rustls = "0.24.1"
log = "0.4"
log4rs = "1.0"
map_for = "0.3.0"
mini-redis = "0.4.1" # use depdendency only for tokio::fs (tokio-fs repo does not work for me)
num-traits = "0.2.15"
once_cell = "1.18.0"
select = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.32.0"
tokio-stream = "0.1.14"
typenum = "1.16.0"
chrono = "0.4.31"
