[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
freeflowfeeds = { path = "../.." }
select = "0.6.0"
map_for = "0.3.0"
mini-redis = "0.4.1"
tokio = "1.32.0"
tokio-stream = "0.1.14"
rss = "2.0.6"
serde_json = { version = "1.0.107", features = [] }

[lib]
name = "tests"
path = "src/libs.rs"
