[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1.74", features = [] }
freeflowfeeds = { path = "../.." }
select = "0.6.0"
map_for = "0.3.0"
mini-redis = "0.4.1"
mockall = "0.11.4"
tokio = "1.32.0"
tokio-stream = "0.1.14"
serde_json = { version = "1.0.107", features = [] }
serde = { version = "1.0.188", features = ["derive"] }

[lib]
name = "tests"
path = "src/libs.rs"
